<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/paxTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax" />

    <EditText
        android:id="@+id/editPaxInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toggleSvsBtn"
            android:textOff="@string/toggleSvsBtn"
            android:textOn="@string/toggleSvsBtn" />

        <ToggleButton
            android:id="@+id/toggleGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/toggleGstBtn"
            android:textOff="@string/toggleGstBtn"
            android:textOn="@string/toggleGstBtn" />
    </LinearLayout>

    <TextView
        android:id="@+id/discountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/editDiscountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonCash" />

        <RadioButton
            android:id="@+id/radioPayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonPayNow" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/calculateBtn"
            android:textColor="#000000"
            app:backgroundTint="#CDCDCD" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/resetBtn"
            android:textColor="#000000"
            app:backgroundTint="#CDCDCD" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalBillTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalBill"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/splitBillTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splitBill"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>